cli/tests/snapshot/snapshots/snapshot__package_stderr_invalid-version.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: failed to evaluate package manifest

error: contract broken by the value of `version`
       invalid semver
     ┌─ <stdlib/std.ncl>:3373:17
     │
3373 │               | Semver
     │                 ------ expected type
     │
     ┌─ [INPUTS_PATH]/package/invalid-version.ncl:6:13
     │
   6 │   version = "0.1",
     │             ^^^^^ applied to this expression
     │
     ┌─ <unknown> (generated by evaluation):1:1
     │
   1 │ "0.1"
     │ ----- evaluated to this value
